# objxp

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  DemoListener.cpp  HelloYail.cpp  ObexTest.cpp  PointerCasting.cpp  RawPointer.cpp  RefCount.cpp  Yserv.cpp
examples/tutorial/: AbcMfg.cpp  AbcMfg.h  AbcResource.h  AbcSales.cpp  AbcSales.h  CMakeLists.txt  MfgOrder.cpp  MfgOrder.h
examples/tutorial/assignment1/: AbcCompany.cpp  CMakeLists.txt
examples/tutorial/assignment2/: AbcFactory.cpp  AbcHQ.cpp  CMakeLists.txt
examples/tutorial/assignment3/: AbcDC.cpp  AbcFactory.cpp  AbcHQ.cpp  CMakeLists.txt
examples/tutorial/utils/: delObject.py  putStringObject.py
include/: BasicIoService.h  BasicSocketAcceptor.h  Bitset.h  ConnectionCallback.h  ConsoleIo.h  IoObject.h  IoService.h  JsonSerializer.h  MsgIo.h  ObexCallback.h  ObexCallbackReceiver.h  ObexClient.h  ObexInfoProvider.h  ObexJsonObject.h  ObexNumberObject.h  ObexObject.h  ObexPythonCallback.h  ObexServer.h  ObexStringObject.h  ObexTree.h  Serializable.h  SocketConnector.h  SubscriptionCallback.h  TcpSocketAcceptor.h  TcpSocketConnector.h  TimerObject.h  UnixSocketAcceptor.h  UnixSocketConnector.h  YPath.h  YPathProc.h  YPathService.h  YUtils.h  Yail.h  c-intf.h
src/: BasicIoService.cpp  BasicSocketAcceptor.cpp  Bitset.cpp  ConsoleIo.cpp  IoObject.cpp  MsgIo.cpp  ObexCallbackReceiver.cpp  ObexClient.cpp  ObexInfoProvider.cpp  ObexJsonObject.cpp  ObexNumberObject.cpp  ObexPythonCallback.cpp  ObexServer.cpp  ObexStringObject.cpp  ObexTree.cpp  ObjXp.py  SocketConnector.cpp  TcpSocketAcceptor.cpp  TcpSocketConnector.cpp  TimerObject.cpp  UnixSocketAcceptor.cpp  UnixSocketConnector.cpp  YUtils.cpp  Yail.cpp  c-intf.c  swig_template.i
test/: CliTest.py  ObexCallbackSrcTest.py  ObexClientTest.py  ObexCohabClientTest.py  ObexDoDTest.py  ObexFindTest.py  ObexInfoProviderTest.py  ObexKeepaliveTest.py  ObexTest.py  ObexTransactionTest.py  SvrTest.py  test-1.py  test-2.py  test-3.py  ycat.py  ydel.py  yls.py  ytest.py  ytree.py
test/YTest/: TestBase.py  YTest.py  YTestResult.py  YTestSuite.py
